# sleef

./: .gitignore
benchmarks/expf/: CMakeLists.txt  Makefile  Makefile.fp16  README.md  expf_benchmark.cpp  expf_fp16_benchmark.cpp
benchmarks/expf_f16/: CMakeLists.txt  Makefile  build.sh  expf_f16_benchmark.cpp
examples/expf/: Makefile  README.md  expf_test.c
tests/expf_f16/: Makefile  README.md  expf_f16_test.cpp
